<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/account2" />
        <item
            android:id="@+id/recordsFragment"
            android:icon="@drawable/ic_records"
            android:title="@string/tittle_records" />
        <item
            android:id="@+id/nav_we"
            android:icon="@drawable/ic_salons"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_globe"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_briefcase"
            android:title="@string/business" />
        <item
            android:id="@+id/nav_shield"
            android:icon="@drawable/ic_shield"
            android:title="@string/shield" />

    </group>
</menu>